# online_lessons

./: .env.sample  README.md  pyproject.toml
config/: settings.py
lms/: models.py
lms/migrations/: 0001_initial.py
users/: models.py
users/migrations/: 0001_initial.py
